--- a/.github/workflows/docker-testing.yml
+++ b/.github/workflows/docker-testing.yml
@@ -1,8 +1,9 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Image (Testing)
 
 on:
   push:
-    branches: [ "testing-docker" ]
+    branches:
+      - testing-docker
 
 env:
   REGISTRY: ghcr.io
@@ -31,6 +32,11 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            # Testing branch always gets a 'testing' tag
+            type=raw,value=testing
+            # Also tag with the git sha so you can pin to a specific test build
+            type=sha,prefix=sha-,format=short
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
