--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,10 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+    tags:
+      - 'v*.*.*'   # Trigger on version tags like v2.1.0
 
 env:
   REGISTRY: ghcr.io
@@ -31,6 +34,18 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            # On push to main branch: tag as 'latest'
+            type=raw,value=latest,enable={{is_default_branch}}
+            # On push to main branch: tag as 'main' (backwards compat for existing users)
+            type=raw,value=main,enable={{is_default_branch}}
+            # On a vX.Y.Z tag: publish full version, minor, and major tags
+            # e.g. v2.1.0 → 2.1.0, 2.1, 2
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            # Always include the git sha for traceability
+            type=sha,prefix=sha-,format=short
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
